deployments/kubernetes/platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lsevin
  labels:
    app.kubernetes.io/part-of: lsevin
